# permeability_estimation

./: .gitignore  main.py  preprocessing.py  pyproject.toml  subarray_sampler.py
data_driven/features/: extractor.py  selector.py
data_driven/models/: permeability_predictor.py  pore_flow_net.py  rock_type_classifier.py
lbpm_manager/: __init__.py  gen_input_db.awk  lbpm_manager.py
lbpm_manager/templates/: input_mrt.db
velocity_field/: __main__.py
