[project]
name = "permeability-estimation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kneed>=0.8.5",
    "matplotlib==3.8.2",
    "numpy==1.26.0",
    "polars==0.20.13",
    "pyqt5>=5.15.11",
    "quantimpy>=0.2.6",
    "scikit-learn>=1.5.2",
    "scipy==1.11.4",
    "seaborn>=0.13.2",
    "torch>=2.5.1",
    "yellowbrick>=1.5",
]
